Style: Fix uneven spaces on the sides in navbar

--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -13,14 +13,15 @@
   }
 
   .right-group {
+    display: flex;
+    flex-direction: row-reverse;
     flex-grow: 1;
     width: fit-content;
-    display: flex;
     align-items: center;
     align-content: center;
 
     .login-btn {
-      padding-left: 16px;
+      padding-right: 16px;
     }
 
     .theme-switch {
